# AveSilica

./: .containerignore  .gitignore  Containerfile  README.md  pyproject.toml
examples/: .env.example  .zuliprc.example
examples/systemd/: token-zulip.service
src/token_zulip/: __init__.py  addressing.py  cli.py  codex_adapter.py  config.py  control.py  instructions.py  layout.py  loop.py  memory.py  models.py  prompt.py  reflections.py  schedules.py  skills.py  storage.py  telemetry.py  turn_context.py  typing_status.py  uploads.py  workspace.py  zulip_io.py
tests/: test_codex_adapter.py  test_config_cli.py  test_control.py  test_deployment_examples.py  test_instructions.py  test_loop.py  test_models_and_zulip.py  test_schedules.py  test_storage_memory.py  test_storage_reflections.py  test_turn_context.py  test_uploads.py
workspace/: AGENTS.md  AGENTS.override.md
workspace/loop/: memory.md  participation.md
workspace/memory/: AGENTS.md  durable.md  index.json
workspace/realm/: REFLECTIONS.md
workspace/references/: codex-thread-contract.md  decision-schema.json  memory-policy.md  memory-worker-policy.md  participation.md  reply-turn-prompt.md  runtime-contract.md  schedule-decision-schema.json  schedule-worker-policy.md  scheduled-job-policy.md  scheduled-job-prompt.md  skill-decision-schema.json  system.md  turn-prompt.md
workspace/references/memory/: schema.json  system.md  user.md
workspace/references/post/: conversation_records.md  system.md  user.md
workspace/references/reflections/: schema.json  system.md  user.md
workspace/roles/: default.md
(+11 files in other folders)
